feat(task4): revamp from task3

--- a/task4/CMakeLists.txt
+++ b/task4/CMakeLists.txt
@@ -38,7 +38,7 @@ message(BSP_SOURCES="${BSP_SOURCES}")
 
 # Add executable. Default name is the project name, version 0.1
 include_directories(../../bsp) # Add include files for the bsp
-add_executable(task4 main.c ${BSP_SOURCES})
+add_executable(task4 main.c vector.c skeleton_v2.c ${BSP_SOURCES})
 
 pico_set_program_name(task4 "task4")
 pico_set_program_version(task4 "0.1")
